// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A completes a turn 1`] = `
Array [
  "Populate 50 questions over [Pop, Science, Sports, Rock] catergory",
  "Add player Mathieu at place 0",
  "Add player Thomas at place 1",
  "Dice rolled on 3",
  "Player Mathieu is moved to 3",
  "Rock Question 0",
  "Player Mathieu has gained a point",
  "Player Thomas turn",
  "Dice rolled on 1",
  "Player Thomas is moved to 1",
  "Science Question 0",
  "Player Thomas has gained a point",
  "Player Mathieu turn",
  "Dice rolled on 11",
  "Player Mathieu has completed a turn",
  "Player Mathieu is moved to 2",
  "Sports Question 0",
  "Player Mathieu has gained a point",
  "Player Thomas turn",
  "Dice rolled on 3",
  "Player Thomas is moved to 4",
  "Pop Question 0",
  "Player Thomas has gained a point",
  "Player Mathieu turn",
]
`;

exports[`A completes a turn out of penalty box 1`] = `
Array [
  "Populate 50 questions over [Pop, Science, Sports, Rock] catergory",
  "Add player Mathieu at place 0",
  "Add player Thomas at place 1",
  "Dice rolled on 3",
  "Player Mathieu is moved to 3",
  "Rock Question 0",
  "Player Mathieu has given a wrong answer and is getting into penalty box",
  "Player Thomas turn",
  "Dice rolled on 1",
  "Player Thomas is moved to 1",
  "Science Question 0",
  "Player Thomas has gained a point",
  "Player Mathieu turn",
  "Dice rolled on 11",
  "Player Mathieu is getting out of penalty box",
  "Player Mathieu has completed a turn out of penalty box",
  "Player Mathieu is moved to 2",
  "Sports Question 0",
  "Player Mathieu has given a correct answer and is getting out of penalty box",
  "Player Mathieu has gained a point",
  "Player Thomas turn",
  "Dice rolled on 3",
  "Player Thomas is moved to 4",
  "Pop Question 0",
  "Player Thomas has gained a point",
  "Player Mathieu turn",
]
`;

exports[`A player gives a wrong answer and doesn't exit penlaty box with a correct answer 1`] = `
Array [
  "Populate 50 questions over [Pop, Science, Sports, Rock] catergory",
  "Add player Mathieu at place 0",
  "Add player Thomas at place 1",
  "Dice rolled on 1",
  "Player Mathieu is moved to 1",
  "Science Question 0",
  "Player Mathieu has gained a point",
  "Player Thomas turn",
  "Dice rolled on 1",
  "Player Thomas is moved to 1",
  "Science Question 1",
  "Player Thomas has given a wrong answer and is getting into penalty box",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu is moved to 2",
  "Sports Question 0",
  "Player Mathieu has gained a point",
  "Player Thomas turn",
  "Dice rolled on 2",
  "Player Thomas is not getting out of penalty box",
  "Player Thomas is not moving (1)",
  "Player Mathieu turn",
]
`;

exports[`A player gives a wrong answer and doesn't exit penlaty box with a wrong answer 1`] = `
Array [
  "Populate 50 questions over [Pop, Science, Sports, Rock] catergory",
  "Add player Mathieu at place 0",
  "Add player Thomas at place 1",
  "Dice rolled on 1",
  "Player Mathieu is moved to 1",
  "Science Question 0",
  "Player Mathieu has gained a point",
  "Player Thomas turn",
  "Dice rolled on 1",
  "Player Thomas is moved to 1",
  "Science Question 1",
  "Player Thomas has given a wrong answer and is getting into penalty box",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu is moved to 2",
  "Sports Question 0",
  "Player Mathieu has gained a point",
  "Player Thomas turn",
  "Dice rolled on 2",
  "Player Thomas is not getting out of penalty box",
  "Player Thomas is not moving (1)",
  "Player Thomas has given a wrong answer and is getting into penalty box",
  "Player Mathieu turn",
]
`;

exports[`A player gives a wrong answer and doesn't exit penlaty box with a wrong answer and an odd roll 1`] = `
Array [
  "Populate 50 questions over [Pop, Science, Sports, Rock] catergory",
  "Add player Mathieu at place 0",
  "Add player Thomas at place 1",
  "Dice rolled on 1",
  "Player Mathieu is moved to 1",
  "Science Question 0",
  "Player Mathieu has gained a point",
  "Player Thomas turn",
  "Dice rolled on 1",
  "Player Thomas is moved to 1",
  "Science Question 1",
  "Player Thomas has given a wrong answer and is getting into penalty box",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu is moved to 2",
  "Sports Question 0",
  "Player Mathieu has gained a point",
  "Player Thomas turn",
  "Dice rolled on 3",
  "Player Thomas is getting out of penalty box",
  "Player Thomas is moved to 4",
  "Pop Question 0",
  "Player Thomas has given a wrong answer and is getting into penalty box",
  "Player Mathieu turn",
]
`;

exports[`A player gives a wrong answer and doesn't move 1`] = `
Array [
  "Populate 50 questions over [Pop, Science, Sports, Rock] catergory",
  "Add player Mathieu at place 0",
  "Add player Thomas at place 1",
  "Dice rolled on 1",
  "Player Mathieu is moved to 1",
  "Science Question 0",
  "Player Mathieu has gained a point",
  "Player Thomas turn",
  "Dice rolled on 1",
  "Player Thomas is moved to 1",
  "Science Question 1",
  "Player Thomas has given a wrong answer and is getting into penalty box",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu is moved to 2",
  "Sports Question 0",
  "Player Mathieu has gained a point",
  "Player Thomas turn",
  "Dice rolled on 2",
  "Player Thomas is not getting out of penalty box",
  "Player Thomas is not moving (1)",
  "Player Mathieu turn",
]
`;

exports[`A player gives a wrong answer and exits penlaty box 1`] = `
Array [
  "Populate 50 questions over [Pop, Science, Sports, Rock] catergory",
  "Add player Mathieu at place 0",
  "Add player Thomas at place 1",
  "Dice rolled on 1",
  "Player Mathieu is moved to 1",
  "Science Question 0",
  "Player Mathieu has gained a point",
  "Player Thomas turn",
  "Dice rolled on 1",
  "Player Thomas is moved to 1",
  "Science Question 1",
  "Player Thomas has given a wrong answer and is getting into penalty box",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu is moved to 2",
  "Sports Question 0",
  "Player Mathieu has gained a point",
  "Player Thomas turn",
  "Dice rolled on 3",
  "Player Thomas is getting out of penalty box",
  "Player Thomas is moved to 4",
  "Pop Question 0",
  "Player Thomas has given a correct answer and is getting out of penalty box",
  "Player Thomas has gained a point",
  "Player Mathieu turn",
]
`;

exports[`A player has won 1`] = `
Array [
  "Populate 50 questions over [Pop, Science, Sports, Rock] catergory",
  "Add player Mathieu at place 0",
  "Dice rolled on 1",
  "Player Mathieu is moved to 1",
  "Science Question 0",
  "Player Mathieu has gained a point",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu is moved to 2",
  "Sports Question 0",
  "Player Mathieu has gained a point",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu is moved to 3",
  "Rock Question 0",
  "Player Mathieu has gained a point",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu is moved to 4",
  "Pop Question 0",
  "Player Mathieu has gained a point",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu is moved to 5",
  "Science Question 1",
  "Player Mathieu has gained a point",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu is moved to 6",
  "Sports Question 1",
  "Player Mathieu has gained a point",
  "Player Mathieu has won",
  "Player Mathieu turn",
]
`;

exports[`A player has won out of penalty box 1`] = `
Array [
  "Populate 50 questions over [Pop, Science, Sports, Rock] catergory",
  "Add player Mathieu at place 0",
  "Dice rolled on 1",
  "Player Mathieu is moved to 1",
  "Science Question 0",
  "Player Mathieu has gained a point",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu is moved to 2",
  "Sports Question 0",
  "Player Mathieu has gained a point",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu is moved to 3",
  "Rock Question 0",
  "Player Mathieu has gained a point",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu is moved to 4",
  "Pop Question 0",
  "Player Mathieu has gained a point",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu is moved to 5",
  "Science Question 1",
  "Player Mathieu has gained a point",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu is moved to 6",
  "Sports Question 1",
  "Player Mathieu has given a wrong answer and is getting into penalty box",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu is getting out of penalty box",
  "Player Mathieu is moved to 7",
  "Rock Question 1",
  "Player Mathieu has given a correct answer and is getting out of penalty box",
  "Player Mathieu has gained a point",
  "Player Mathieu has won",
  "Player Mathieu turn",
]
`;

exports[`A player in penalty box gives a correct answer on an even roll 1`] = `
Array [
  "Populate 50 questions over [Pop, Science, Sports, Rock] catergory",
  "Add player Mathieu at place 0",
  "Add player Thomas at place 1",
  "Dice rolled on 1",
  "Player Mathieu is moved to 1",
  "Science Question 0",
  "Player Mathieu has gained a point",
  "Player Thomas turn",
  "Dice rolled on 1",
  "Player Thomas is moved to 1",
  "Science Question 1",
  "Player Thomas has given a wrong answer and is getting into penalty box",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu is moved to 2",
  "Sports Question 0",
  "Player Mathieu has gained a point",
  "Player Thomas turn",
  "Dice rolled on 2",
  "Player Thomas is not getting out of penalty box",
  "Player Thomas is not moving (1)",
  "Player Mathieu turn",
]
`;

exports[`A player in penalty box gives a correct answer on an even roll 2`] = `
Array [
  "Populate 50 questions over [Pop, Science, Sports, Rock] catergory",
  "Add player Mathieu at place 0",
  "Add player Thomas at place 1",
  "Dice rolled on 1",
  "Player Mathieu is moved to 1",
  "Science Question 0",
  "Player Mathieu has given a wrong answer and is getting into penalty box",
  "Player Thomas turn",
  "Dice rolled on 1",
  "Player Thomas is moved to 1",
  "Science Question 1",
  "Player Thomas has gained a point",
  "Player Mathieu turn",
  "Dice rolled on 2",
  "Player Mathieu is not getting out of penalty box",
  "Player Mathieu is not moving (1)",
  "Player Thomas turn",
  "Dice rolled on 1",
  "Player Thomas is moved to 2",
  "Sports Question 0",
  "Player Thomas has gained a point",
  "Player Mathieu turn",
]
`;

exports[`My first scenario 1`] = `
Array [
  "Populate 50 questions over [Pop, Science, Sports, Rock] catergory",
  "Add player Mathieu at place 0",
  "Add player Thomas at place 1",
  "Add player Clément at place 2",
  "Dice rolled on 1",
  "Player Mathieu is moved to 1",
  "Science Question 0",
  "Player Mathieu has gained a point",
  "Player Thomas turn",
  "Dice rolled on 1",
  "Player Thomas is moved to 1",
  "Science Question 1",
  "Player Thomas has gained a point",
  "Player Clément turn",
  "Dice rolled on 1",
  "Player Clément is moved to 1",
  "Science Question 2",
  "Player Clément has gained a point",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu is moved to 2",
  "Sports Question 0",
  "Player Mathieu has gained a point",
  "Player Thomas turn",
  "Dice rolled on 1",
  "Player Thomas is moved to 2",
  "Sports Question 1",
  "Player Thomas has gained a point",
  "Player Clément turn",
  "Dice rolled on 1",
  "Player Clément is moved to 2",
  "Sports Question 2",
  "Player Clément has gained a point",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu is moved to 3",
  "Rock Question 0",
  "Player Mathieu has gained a point",
  "Player Thomas turn",
  "Dice rolled on 1",
  "Player Thomas is moved to 3",
  "Rock Question 1",
  "Player Thomas has gained a point",
  "Player Clément turn",
]
`;

exports[`Players are given all categories of question 1`] = `
Array [
  "Populate 50 questions over [Pop, Science, Sports, Rock] catergory",
  "Add player Mathieu at place 0",
  "Add player Thomas at place 1",
  "Dice rolled on 1",
  "Player Mathieu is moved to 1",
  "Science Question 0",
  "Player Mathieu has gained a point",
  "Player Thomas turn",
  "Dice rolled on 1",
  "Player Thomas is moved to 1",
  "Science Question 1",
  "Player Thomas has gained a point",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu is moved to 2",
  "Sports Question 0",
  "Player Mathieu has gained a point",
  "Player Thomas turn",
  "Dice rolled on 1",
  "Player Thomas is moved to 2",
  "Sports Question 1",
  "Player Thomas has gained a point",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu is moved to 3",
  "Rock Question 0",
  "Player Mathieu has gained a point",
  "Player Thomas turn",
  "Dice rolled on 1",
  "Player Thomas is moved to 3",
  "Rock Question 1",
  "Player Thomas has gained a point",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu is moved to 4",
  "Pop Question 0",
  "Player Mathieu has gained a point",
  "Player Thomas turn",
  "Dice rolled on 1",
  "Player Thomas is moved to 4",
  "Pop Question 1",
  "Player Thomas has gained a point",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu is moved to 5",
  "Science Question 2",
  "Player Mathieu has gained a point",
  "Player Thomas turn",
  "Dice rolled on 1",
  "Player Thomas is moved to 5",
  "Science Question 3",
  "Player Thomas has gained a point",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu is moved to 6",
  "Sports Question 2",
  "Player Mathieu has gained a point",
  "Player Mathieu has won",
  "Player Thomas turn",
  "Dice rolled on 1",
  "Player Thomas is moved to 6",
  "Sports Question 3",
  "Player Thomas has gained a point",
  "Player Thomas has won",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu is moved to 7",
  "Rock Question 2",
  "Player Mathieu has gained a point",
  "Player Thomas turn",
  "Dice rolled on 1",
  "Player Thomas is moved to 7",
  "Rock Question 3",
  "Player Thomas has gained a point",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu is moved to 8",
  "Pop Question 2",
  "Player Mathieu has gained a point",
  "Player Thomas turn",
  "Dice rolled on 1",
  "Player Thomas is moved to 8",
  "Pop Question 3",
  "Player Thomas has gained a point",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu is moved to 9",
  "Science Question 4",
  "Player Mathieu has gained a point",
  "Player Thomas turn",
  "Dice rolled on 1",
  "Player Thomas is moved to 9",
  "Science Question 5",
  "Player Thomas has gained a point",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu is moved to 10",
  "Sports Question 4",
  "Player Mathieu has gained a point",
  "Player Thomas turn",
  "Dice rolled on 1",
  "Player Thomas is moved to 10",
  "Sports Question 5",
  "Player Thomas has gained a point",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu is moved to 11",
  "Rock Question 4",
  "Player Mathieu has gained a point",
  "Player Thomas turn",
  "Dice rolled on 1",
  "Player Thomas is moved to 11",
  "Rock Question 5",
  "Player Thomas has gained a point",
  "Player Mathieu turn",
  "Dice rolled on 1",
  "Player Mathieu has completed a turn",
  "Player Mathieu is moved to 0",
  "Pop Question 4",
  "Player Mathieu has gained a point",
  "Player Thomas turn",
  "Dice rolled on 1",
  "Player Thomas has completed a turn",
  "Player Thomas is moved to 0",
  "Pop Question 5",
  "Player Thomas has gained a point",
  "Player Mathieu turn",
]
`;
